Fix firefox layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -146,17 +146,17 @@ p{
     display: block;
   }
 
-
+.darkModeBtnContainer{
+    display: flex;
+    justify-content: end;
+    margin-top: 10px;
+    margin-bottom: -50px;
+    margin-right: -120px;
+}
 .darkModeBtn {
     position: relative;
     z-index: 10000;
     cursor: pointer;
     width: 50px;
     height: auto;
-    display: flex;
-    justify-self: end;
-    margin-top: 10px;
-    margin-bottom: -50px;
-    margin-left: 150px;
-    margin-right: -120px;
   }
